# cloudways_monitor

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  README.md  compose.yaml  deploy.sh  pyproject.toml
cloudways_monitor/: __init__.py  __main__.py  alerts.py  app.py  auth.py  cloudways.py  collector.py  doctor.py  settings.py  storage.py
docs/: deployment.md  implementation-plan.md  spec-v1.md
docs/adr/: 0001-sqlite-for-v1-metric-history.md  0002-dockerized-dashboard-on-shared-digitalocean-droplet.md  0003-fastapi-uvicorn-for-dashboard-api.md  0004-react-vite-for-dashboard-ui.md  0005-sse-for-live-dashboard-updates.md  0006-single-user-app-level-authentication.md  0007-threshold-alerts-with-telegram-notifications.md  0008-root-env-file-for-runtime-configuration.md  0009-read-only-monitoring-for-v1.md  0010-single-production-container.md  0011-hybrid-metric-snapshot-storage.md
docs/agents/: domain.md  issue-tracker.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  styles.css
tests/: helpers.py  test_alert_api.py  test_alerts.py  test_auth.py  test_cloudways_client.py  test_collector.py  test_deployment_artifacts.py  test_doctor.py  test_events_api.py  test_health.py  test_overview_api.py  test_raw_latest_api.py  test_resources_api.py  test_runtime_factory.py  test_series_api.py  test_settings.py  test_static_ui.py  test_storage.py  test_telegram.py
