[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudways-monitor"
version = "0.1.0"
description = "Private Cloudways server and application monitoring dashboard."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124",
    "httpx>=0.28",
    "uvicorn[standard]>=0.38",
]

[project.optional-dependencies]
dev = [
    "pytest>=9",
    "ruff>=0.14",
    "pyright>=1.1",
]

[tool.setuptools.packages.find]
include = ["cloudways_monitor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"
